# lark

./: TODO.md  code_analysis_20250728_222705.json  code_analysis_20250728_222816.json  code_analysis_20250728_222841.json  code_analysis_20250728_222856.json  code_analysis_20250728_222919.json  code_analysis_20250728_223135.json  go.work  go.work.sum
cmd/: c-gen.md  go.mod  ideas.md
cmd/analyser/: .gitignore  go.mod  main.go  makefile
cmd/analysis/: todo.md
cmd/code-gen/: go.mod  main.go  wails.json
cmd/domain-checker/: go.mod  main.go
cmd/encrypt/: go.mod  main.go
cmd/everia/: Makefile  README.md  app.go  go.mod  main.go  wails.json
cmd/file/: Makefile  file.md  go.mod  main.go
cmd/file-drive/: go.mod  main.go  makefile
cmd/filecrypt/: go.mod  main.go
cmd/finn/: app.go  go.mod  go.sum  main.go  makefile  wails.json
cmd/hello/: go.mod  main.go
cmd/image/: go.mod  main.go
cmd/impz/: go.mod  ideas.md  main.go  wails.json
cmd/lark/: Makefile  go.mod  lark.md  main.go  template.md
cmd/pdf/: main.go
cmd/rename/: go.mod  main.go
cmd/search/: consts.go  go.mod  main.go  temp.go
cmd/securerandom/: go.mod  main.go
cmd/shorten-url/: .env  go.mod  main.go
cmd/sqlc-gen/: go.mod  main.go
cmd/test/: .env  go.mod  main.go
cmd/timer/: buid.bat  main.cpp
cmd/vc/: go.mod  main.go
cmd/work/: go.mod  main.go
cmd/work/sync/: BUILD.bazel  sync.go
cmd/work/use/: BUILD.bazel  use.go
docs/: CODING_STYLE.md  builder.go  command.go  commit.md  decorator.go  factory.go  observer.go  singleton.go  strategy.go
template/: go-gin.md
(+214 files in other folders)
