load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sync",
    srcs = ["sync.go"],
    importpath = "github.com/Long-Software/Sonality/services/work/sync",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/consts:pkg_consts",
        "//pkg/utils:pkg_utils",
    ],
)
